--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "aaron.mn",
-  "author": "Aaron Shapiro",
+  "author": "Folarin Lawal",
   "keywords": [
     "gatsby"
   ],
